k8s/httpbin-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: marketflow-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
        - name: httpbin
          image: kennethreitz/httpbin
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: marketflow-dev
spec:
  selector:
    app: httpbin
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-dev
  namespace: marketflow-dev
  annotations:
    kubernetes.io/ingress.class: "nginx-dev"
    nginx.ingress.kubernetes.io/controller: "k8s.io/ingress-nginx-dev"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx-dev
  rules:
    - host: app0-dev.okondratov.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 80
