k8s/httpbin-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: marketflow-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
        - name: httpbin
          image: kennethreitz/httpbin
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: marketflow-prod
spec:
  selector:
    app: httpbin
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-prod
  namespace: marketflow-prod
  annotations:
    kubernetes.io/ingress.class: "nginx-prod"
    nginx.ingress.kubernetes.io/controller: "k8s.io/ingress-nginx-prod"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx-prod
  tls:
    - hosts:
        - app0.okondratov.online
      secretName: httpbin-prod-tls
  rules:
    - host: app0.okondratov.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 80
